Fixed issue with "more like this" scrollers conflicting with horizontal scrollers

--- a/code/web/interface/themes/responsive/css/main.css
+++ b/code/web/interface/themes/responsive/css/main.css
@@ -9812,12 +9812,14 @@ a.browse-thumbnail-sorted.active {
   max-width: 125px;
   max-height: 125px;
   padding: 3px;
+  margin: auto;
+}
+.horizontalCarouselSpotlightWrapper .scrollerTitleCover {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  margin: auto;
 }
 .collectionSpotlightSelector {
   width: 100%;
